Jump Start Changelog
====================

1.1.3
-----

* Fixed image logo display in IE when no image width is set.
* Fixed Gallery Override feature of mini post grid being limited to 5 images.
* Added filter to `themeblvd_show_comments`.
* Admin jQuery improvements for 1.9 - Converted all .live() to .on()
* Fixed `ThemeBlvd_Select_Menu_Walker::start_el()` PHP 5.4 strict error.
* Fixed CSS overflow quirk with Nivo slider type.
* Fixed IE8 Carrousel slider display bug.

1.1.2
-----

* Fixed bug with saving "Custom Text" logo option.
* Fixed issues with main menu dropdowns not displaying over some items.
* Fixed handling of private and password-protected pages with custom layouts.
* Fixed compatibility with [Theme Blvd Layouts to Posts](http://wordpress.org/plugins/theme-blvd-layouts-to-posts/) plugin.
* Updated breadcrumbs HTML markup to match Twitter Bootstrap 2.3 changes.

--------------------------------------------------------------

1.1.1
-----

* Fixed admin bugs in Firefox and IE, media uploader, radio buttons, and color pickers.
* Fixed bug with archive content/excerpt option not being respected on search results.
* Fixed bug with `themeblvd_edit_option()` in Options API.
* Fixed Magnific popup localization with Next/Previous buttons.
* Adjusted for `themeblvd_get_option_name()` to be available earlier, like prior to framework v2.3.
* Applied proper clearfix to #featured, #main, #featured_below containers.
* Fixed line-height CSS issues with slider headlines.

--------------------------------------------------------------

1.1.0
-----

*Warning: Make sure to checkout this article before updating: [Updating to Jump Start 1.1](http://support.themeblvd.com/updating-to-jump-start-1-1/)*

**If you're using the Layout Builder plugin, you must update it to v1.2+**<br />
**If you're using the Sliders plugin, you must update it to v1.1+**

* **Updated Theme Blvd Framework to v2.3.**
* Updated FontAwesome to v3.2.
* Updated Twitter Bootstrap to v2.3.