@@ -7,6 +7,7 @@ Jump Start Changelog
 * Fixed image logo display in IE when no image width is set.
 * Fixed Gallery Override feature of mini post grid being limited to 5 images.
 * Added filter to `themeblvd_show_comments`.
+* Added filter `themeblvd_get_option` for every time an option is pulled.
 * Admin jQuery improvements for 1.9 - Converted all .live() to .on()
 * Fixed `ThemeBlvd_Select_Menu_Walker::start_el()` PHP 5.4 strict error.
 * Fixed CSS overflow quirk with Nivo slider type.
